# KExperiment

./: .gitignore  CMakeLists.txt  KExperiment.pro  main.cpp
Actions/: Action.cpp  Action.h  OutputAction.h  RestAction.h
Common/: Common.h  Config.cpp  Config.h  Constants.h  Global.cpp  Global.h  Logger.cpp  Logger.h  Types.h  Uncopyable.h
Components/: AggregateComponent.cpp  AggregateComponent.h  Component.cpp  Component.h  ComponentCollection.cpp  ComponentCollection.h  ComponentDataPrivate.h  ComponentDomParser.cpp  ComponentDomParser.h  ComponentExceptions.cpp  ComponentExceptions.h  ComponentFactory.cpp  ComponentFactory.h  ComponentInterface.cpp  ComponentInterface.h  ComponentList.cpp  ComponentList.h  ComponentRegister.cpp  ComponentRegister.h  Components.h  MetaData.cpp  MetaData.h  OutputComponent.cpp  OutputComponent.h
Components/Actions/: Action.cpp  Action.h  AudioAction.cpp  AudioAction.h  ImageAction.cpp  ImageAction.h  MediaAction.cpp  MediaAction.h  OutputAction.cpp  RestAction.cpp  RestAction.h  TextAction.cpp  TextAction.h  VideoAction.cpp  VideoAction.h
Components/Event/: Event.cpp  Event.h
Components/Events/: Event.cpp  Event.h
Components/Experiment/: Experiment.cpp  Experiment.h
Components/Trial/: Trial.cpp  Trial.h
Events/: Event.cpp  Event.h
Experiment/: Experiment.h
Forms/: ComponentSelectionDialog.ui  EventViewer.ui  MainWindow.ui  actionWizard.ui  actionWizardConfigurationFrame.ui  actionWizardInformationFrame.ui  eventWizard.ui  eventWizardActionSelectionFrame.ui  eventWizardInformationFrame.ui  experimentWizardInformationFrame.ui  mainwindow.ui
Models/: ComponentModel.cpp  ComponentModel.h  ComponentModelInterface.cpp  ComponentModelInterface.h  ComponentSortFilterProxyModel.cpp  ComponentSortFilterProxyModel.h
Models/Action/: ActionModel.cpp  ActionModel.h
Resources/: icons.qrc  resources.qrc
Resources/actions/: Rest_10_Seconds.xml  Rest_30_Seconds.xml  Rest_60_Seconds.xml
Resources/events/: Double_Pause_Event.xml  Single_Pause_Event.xml
Resources/experiments/: Example_Experiment.xml  Example_Experiment2.xml
Resources/schemas/: DataTypes.xsd
Resources/templates/: actions.xml  events.xml
Resources/trials/: Double_Event_Example.xml  Single_Event_Example.xml
Scripts/: create_components.py  create_task_list.py
Tests/: CMakeLists.txt  ComponentDomParserTest.cpp  ComponentDomParserTest.h  ComponentListTest.cpp  ComponentListTest.h  ImageActionTest.cpp  ImageActionTest.h  MediaActionTest.cpp  MediaActionTest.h  Tests.pro  TextActionTest.cpp  TextActionTest.h  components.yml  create_components.py
Tests/Components/Actions/: Audio_Example1.xml  Image_Example1.xml  Rest_10_Seconds.xml  Rest_30_Seconds.xml  Rest_60_Seconds.xml  Text_Example1.xml  Video_Example1.xml
Tests/Components/Events/: Double_Pause_Event.xml  Multiple_Action_Event_Example.xml  Single_Pause_Event.xml
Tests/Components/Experiments/: Example_Experiment.xml  Example_Experiment2.xml
Tests/Components/Trials/: Double_Event_Example.xml  Multiple_Event_Example.xml  Single_Event_Example.xml
UI/: ComponentGraphicsItem.cpp  ComponentGraphicsItem.h  ComponentLibrary.cpp  ComponentLibrary.h  LiveView.cpp  LiveView.h  MainWindow.cpp  MainWindow.h
UI/Forms/: ComponentLibrary.ui  DebugWindow.ui  EventActionSelectionPage.ui  LibraryDockWidget.ui  MainWindow.ui  ViewerFrame.ui  builderFrame.ui  experimentWizard.ui
UI/Wizards/: ComponentSelectionDialog.cpp  ComponentSelectionDialog.h
UI/Wizards/ComponentCreation/: BaseConfigurationPage.cpp  BaseConfigurationPage.h  BaseInformationPage.cpp  BaseInformationPage.h  ComponentSelectionDialog.cpp  ComponentSelectionDialog.h  ConfigurationPage.cpp  ConfigurationPage.h  CreationWizard.cpp  CreationWizard.h  FinishedPage.cpp  FinishedPage.h  InformationPage.cpp  InformationPage.h  WelcomePage.cpp  WelcomePage.h
UI/Wizards/ComponentCreation/Trial/: TrialConfigurationPage.cpp  TrialConfigurationPage.h
UI/Wizards/CreationWizard/: BaseInformationPage.cpp  BaseInformationPage.h  ConfigurationPage.cpp  ConfigurationPage.h  CreationSelectionPage.cpp  CreationSelectionPage.h  CreationWizard.cpp  CreationWizard.h  WelcomePage.cpp  WelcomePage.h
UI/Wizards/CreationWizard/ActionWizard/: ActionInformationPage.cpp  ActionInformationPage.h
Utilities/: Utilities.cpp  Utilities.h
