PROJECT(KTests)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

IF(APPLE)
  SET(PROGNAME KExperiment)
  SET(MACOSX_BUNDLE_SHORT_VERSION_STRING 0.1)
  SET(MACOSX_BUNDLE_VERSION 0.1)
  SET(MACOSX_BUNDLE_LONG_VERSION_STRING Version 0.1)
  SET(CMAKE_OSX_ARCHITECTURES i386;x86_64)
ENDIF(APPLE)

ADD_CUSTOM_COMMAND(
  OUTPUT ComponentTemplates.h
  COMMAND create_components.py 
  )
ADD_DEFINITIONS(-Wall)

SET(QT_USE_QTXML true)
SET(QT_USE_QTXMLPATTERNS true)
SET(QT_USE_QTTEST true)
FIND_PACKAGE(Qt4 REQUIRED)

SET(KTEST_MOC_HDRS ComponentListTest.h)

QT4_WRAP_CPP(KTEST_MOC_SRCS ${KTEST_MOC_HDRS})

INCLUDE(${QT_USE_FILE})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ../3rd .)

ADD_EXECUTABLE(ComponentListTest ComponentListTest.cpp ${KTEST_MOC_SRCS})
ADD_DEPENDENCIES(componentListTest ComponentTemplates.h)

TARGET_LINK_LIBRARIES(ComponentListTest ${QT_LIBRARIES})


